# Differential-Drive-Robot

./: .gitignore
src/controller_tuning/: MANIFEST.in  package.xml  setup.cfg  setup.py
src/controller_tuning/controller_tuning/: trajectory_generator.py  trajectory_publisher.py  trajectory_utils.py
src/controller_tuning/controller_tuning/trajectory/: plots.py  profiles.py  publisher.py  utils.py
src/custom_control/: CMakeLists.txt  package.xml
src/custom_control/config/: controller.yaml  controllers.yaml
src/custom_control/launch/: controller.launch.py  simulate_control.launch.py
src/custom_control/src/: twist_to_twist_stamped.cpp
src/custom_plugins/: CMakeLists.txt  package.xml
src/custom_plugins/src/: diff_drive_plugin.cpp
src/diff_drive_robot_description/: CMakeLists.txt  package.xml
src/diff_drive_robot_description/config/: displays_config.rviz
src/diff_drive_robot_description/launch/: display.launch.py  publish_description.launch.py  simulate.launch.py
src/diff_drive_robot_description/urdf/: base.xacro  control.xacro  macros.xacro  physics.xacro  robot.urdf.xacro  wheels.xacro
src/diff_drive_robot_description/worlds/: custom_world.sdf
src/gz_ros2_pid/: CMakeLists.txt  package.xml  plugin_description.xml
src/gz_ros2_pid/include/gz_ros2_control/: gz_ros2_control_plugin.hpp  gz_system.hpp  gz_system_interface.hpp
src/gz_ros2_pid/include/gz_ros2_pid/: gz_pid_system.hpp  gz_ros2_pid_plugin.hpp  pid_constants.hpp
src/gz_ros2_pid/src/gz_ros2_control/: gz_ros2_control_plugin.cpp  gz_system.cpp
src/gz_ros2_pid/src/gz_ros2_pid/: gz_pid_system.cpp  gz_ros2_pid_plugin.cpp
