[metadata]
name = controller_tuning
version = 0.1.0
description = Scripts for generating, publishing, logging, and analysing data to tune controllers
author = James Harbon
author_email = jharbon299@gmail.com
license = MIT

[options]
packages = find:
install_requires =
    setuptools
    rclpy
    rcl_interfaces
    geometry_msgs
    tf_transformations
python_requires = >=3.12
zip_safe = True
include_package_data = True

[options.entry_points]
console_scripts =
    trajectory_publisher = controller_tuning.trajectory_publisher:main

[options.data_files]
share/controller_tuning = package.xml
share/ament_index/resource_index/packages = resource/controller_tuning
