[metadata]
name = controller_tuning
version = 1.0.0
description = Scripts for generating, publishing, logging, and analysing data to tune controllers
author = James Harbon
author_email = jharbon299@gmail.com
license = MIT

[options]
packages = find:
install_requires =
    setuptools
    rclpy
    rcl_interfaces
    geometry_msgs
    tf_transformations
python_requires = >=3.12
zip_safe = True
include_package_data = True

[develop]
script_dir=$base/lib/controller_tuning

[install]
install-scripts=$base/lib/controller_tuning

[options.entry_points]
console_scripts =
    trajectory_publisher = controller_tuning.trajectory.publisher:main

[options.data_files]
share/controller_tuning = package.xml
share/controller_tuning/launch = controller_tuning/launch/trajectory.launch.py
share/ament_index/resource_index/packages = resource/controller_tuning
